tests/test028.err
error: test028.tig:4:12: some fields belonging to the type `t' are missing: b
