tests/test028.tig
/* ERR: Wrong number of fields */
let
  type t = {a : int, b : string}
  var x := t{a = 42}
in
end
